# cookiecutter-poetry

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: .tests-matrix.yaml  tests.yaml
src/cookiecutter_poetry/: main.py
templates/: .gitignore.jinja  LICENSE.jinja
tests/: test_cookiecutter_poetry.py  test_main.py
{{ cookiecutter.__repository_name }}/: .gitignore  README.md  pyproject.toml  {% if cookiecutter.license != "none" %}LICENSE{% endif %}  {& if cookiecutter.license != 'none' &}LICENSE{& endif &}  {( if cookiecutter.license != "none" )}LICENSE{( endif )}
{{ cookiecutter.__repository_name }}/src/{{ cookiecutter.__package_name }}/: __main__.py
{{ cookiecutter.__repository_name }}/tests/: test___main__.py
